--- a/react-app/src/components/UserHabits/UserHabits.css
+++ b/react-app/src/components/UserHabits/UserHabits.css
@@ -30,6 +30,7 @@
     background-color: white;
     margin-right: 3%;
     margin-left: 2%;
+    border: 1px solid white;
 }
 
 #habitsList:hover {
